many imporatnt modification and error fixes:

--- a/competicao.ipynb
+++ b/competicao.ipynb
@@ -87,20 +87,98 @@
     "    if type(model(x)) is tuple:\n",
     "        print(model(x)[0].shape, model(x)[1].shape, model(x)[2].shape)\n",
     "    else:\n",
-    "        print(model(x).shape)\n"
+    "        print(model(x).shape)\n",
+    "\n",
+    "if type(model(x)) is tuple:\n",
+    "        print(model(x)[0].shape, model(x)[1].shape, model(x)[2].shape)\n",
+    "    else:\n",
+    "        print(model(x).shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1a7426e9e6a14117aec7f7887f3dedb9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/5 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8f437e4966e84b9cb602496b09f9ef5d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/5 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b30b1b336ea54976aff3aa7084b8f780",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/4 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14 loss functions to train with\n",
+      "3 models to train with\n",
+      "with PerceptualLoss\n",
+      "with PerceptualLoss\n",
+      "with PerceptualLoss\n",
+      "with PerceptualLoss\n",
+      "with PerceptualLoss\n",
+      "with PerceptualLoss\n",
+      "with PerceptualLoss\n",
+      "with PerceptualLoss\n",
+      "with PerceptualLoss\n",
+      "with PerceptualLoss\n",
+      "with PerceptualLoss\n",
+      "with PerceptualLoss\n",
+      "with PerceptualLoss\n",
+      "with PerceptualLoss\n",
+      "with PerceptualLoss\n"
+     ]
+    }
+   ],
    "source": [
-    "# print(f\"\"\"\n",
-    "# #build_perceptual_losses()\n",
-    "# {build_channel_losses()}\n",
-    "# {build_structural_losses()}\n",
-    "# \"\"\")"
+    "modelos = load_models()\n",
+    "loss_battle = []\n",
+    "\n",
+    "loss_battle.extend(build_perceptual_losses())\n",
+    "loss_battle.extend(build_channel_losses())\n",
+    "loss_battle.extend(build_structural_losses())\n",
+    "print(f\"{len(loss_battle)} loss functions to train with\")\n",
+    "print(f\"{len(modelos)} models to train with\")\n",
+    "for model in modelos:\n",
+    "    for loss_fn in loss_battle:\n",
+    "        if loss_fn.__class__.__name__ == \"PerceptualLoss\":\n",
+    "            print(f\"with {loss_fn.__class__.__name__}\")"
    ]
   },
   {
@@ -320,7 +398,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!torchrun --nnodes=2 --nproc_per_node=2 --node_rank=0 --master_addr=\"10.228.252.209\" --master_port=12355 main.py --nodes=2 --gpus=2 --epochs=100\n"
+    "torchrun --nnodes=2 --nproc_per_node=2 --node_rank=0 --master_addr=\"10.228.252.209\" --master_port=22 main.py --nodes=2 --gpus=2 --epochs=100\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#local\n",
+    "torchrun --nproc_per_node=2 main.py --nodes=1 --gpus=2 --epochs=100\n"
    ]
   }
  ],
