--- a/train.ipynb
+++ b/train.ipynb
@@ -9,275 +9,103 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "712 712 178 178\n"
+      "  0%|          | 0/5 [00:00<?, ?it/s]\n",
+      "14 loss functions to train with\n",
+      "3 models to train with\n",
+      "Train raw: 712 Train ref: 712 Test raw: 178 Test ref: 178\n",
+      "\n",
+      "Training UNet with PerceptualLoss_vgg11\n",
+      "  0%|          | 0/100 [00:00<?, ?it/s]\n",
+      "0it [00:00, ?it/s]\n",
+      "Epoch [0/100], Batch [0/712], Loss: 0.0\n",
+      "Epoch [0/100], Batch [10/712], Loss: 0.0\n",
+      "Epoch [0/100], Batch [20/712], Loss: 0.0\n",
+      "Epoch [0/100], Batch [30/712], Loss: 0.0\n",
+      "Epoch [0/100], Batch [40/712], Loss: 0.0\n",
+      "Epoch [0/100], Batch [50/712], Loss: 0.0\n",
+      "Epoch [0/100], Batch [60/712], Loss: 0.0\n",
+      "Epoch [0/100], Batch [70/712], Loss: 0.0\n",
+      "Epoch [0/100], Batch [80/712], Loss: 0.0\n",
+      "Epoch [0/100], Batch [90/712], Loss: 0.0\n",
+      "Epoch [0/100], Batch [100/712], Loss: 0.0\n",
+      "Epoch [0/100], Batch [110/712], Loss: 0.0\n",
+      "Epoch [0/100], Batch [120/712], Loss: 0.0\n",
+      "Epoch [0/100], Batch [130/712], Loss: 0.0\n",
+      "Epoch [0/100], Batch [140/712], Loss: 0.0\n",
+      "Epoch [0/100], Batch [150/712], Loss: 0.0\n",
+      "Epoch [0/100], Batch [160/712], Loss: 0.0\n",
+      "Epoch [0/100], Batch [170/712], Loss: 0.0\n",
+      "Epoch [0/100], Batch [180/712], Loss: 0.0\n",
+      "Epoch [0/100], Batch [190/712], Loss: 0.0\n",
+      "Epoch [0/100], Batch [200/712], Loss: 0.0\n",
+      "Epoch [0/100], Batch [210/712], Loss: 0.0\n",
+      "Epoch [0/100], Batch [220/712], Loss: 0.0\n",
+      "Epoch [0/100], Batch [230/712], Loss: 0.0\n",
+      "Epoch [0/100], Batch [240/712], Loss: 0.0\n",
+      "Epoch [0/100], Batch [250/712], Loss: 0.0\n",
+      "Epoch [0/100], Batch [260/712], Loss: 0.0\n",
+      "Epoch [0/100], Batch [270/712], Loss: 0.0\n",
+      "Epoch [0/100], Batch [280/712], Loss: 0.0\n",
+      "Epoch [0/100], Batch [290/712], Loss: 0.0\n",
+      "Epoch [0/100], Batch [300/712], Loss: 0.0\n",
+      "Epoch [0/100], Batch [310/712], Loss: 0.0\n",
+      "Epoch [0/100], Batch [320/712], Loss: 0.0\n",
+      "Epoch [0/100], Batch [330/712], Loss: 0.0\n",
+      "Epoch [0/100], Batch [340/712], Loss: 0.0\n",
+      "Epoch [0/100], Batch [350/712], Loss: 0.0\n",
+      "Epoch [0/100], Batch [360/712], Loss: 0.0\n",
+      "Epoch [0/100], Batch [370/712], Loss: 0.0\n",
+      "^C\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/pdi_4/Documentos/Loss_battle/train_noddp.py\", line 97, in <module>\n",
+      "    train_models(epochs=args.epochs)\n",
+      "  File \"/home/pdi_4/Documentos/Loss_battle/train_noddp.py\", line 43, in train_models\n",
+      "    for batch_idx, (data, target) in tqdm(enumerate(train_loader_UIEB)):\n",
+      "  File \"/home/pdi_4/anaconda3/envs/losstest/lib/python3.11/site-packages/tqdm/notebook.py\", line 250, in __iter__\n",
+      "    for obj in it:\n",
+      "  File \"/home/pdi_4/anaconda3/envs/losstest/lib/python3.11/site-packages/tqdm/std.py\", line 1181, in __iter__\n",
+      "    for obj in iterable:\n",
+      "  File \"/home/pdi_4/anaconda3/envs/losstest/lib/python3.11/site-packages/torch/utils/data/dataloader.py\", line 630, in __next__\n",
+      "    data = self._next_data()\n",
+      "           ^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/pdi_4/anaconda3/envs/losstest/lib/python3.11/site-packages/torch/utils/data/dataloader.py\", line 1327, in _next_data\n",
+      "    idx, data = self._get_data()\n",
+      "                ^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/pdi_4/anaconda3/envs/losstest/lib/python3.11/site-packages/torch/utils/data/dataloader.py\", line 1293, in _get_data\n",
+      "    success, data = self._try_get_data()\n",
+      "                    ^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/pdi_4/anaconda3/envs/losstest/lib/python3.11/site-packages/torch/utils/data/dataloader.py\", line 1131, in _try_get_data\n",
+      "    data = self._data_queue.get(timeout=timeout)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/pdi_4/anaconda3/envs/losstest/lib/python3.11/multiprocessing/queues.py\", line 113, in get\n",
+      "    if not self._poll(timeout):\n",
+      "           ^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/pdi_4/anaconda3/envs/losstest/lib/python3.11/multiprocessing/connection.py\", line 257, in poll\n",
+      "    return self._poll(timeout)\n",
+      "           ^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/pdi_4/anaconda3/envs/losstest/lib/python3.11/multiprocessing/connection.py\", line 440, in _poll\n",
+      "    r = wait([self], timeout)\n",
+      "        ^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/pdi_4/anaconda3/envs/losstest/lib/python3.11/multiprocessing/connection.py\", line 947, in wait\n",
+      "    ready = selector.select(timeout)\n",
+      "            ^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/pdi_4/anaconda3/envs/losstest/lib/python3.11/selectors.py\", line 415, in select\n",
+      "    fd_event_list = self._selector.poll(timeout)\n",
+      "                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "KeyboardInterrupt\n"
      ]
     }
    ],
    "source": [
-    "from src.dataload import check_splits\n",
-    "\n",
-    "\n",
-    "a, b,c,d  = check_splits(dataset_path=\"data\", dataset_name= \"UIEB\")\n",
-    "\n",
-    "print(len(a), len(b),len(c), len(d))\n",
-    "###lsui uieb turbid"
+    "!python train_noddp.py "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "932c117d9b0c4e62ab1a21f5f281733a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/5 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6c906529fe404e76a0469ce5cd1af5fb",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/5 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6c547c2a749642d8ad68f9c66bd07746",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/4 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "losses: 14\n",
-      "losses: [PerceptualLoss(\n",
-      "  (perceptual): Sequential(\n",
-      "    (0): Conv2d(3, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "    (1): ReLU(inplace=True)\n",
-      "    (2): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
-      "    (3): Conv2d(64, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "    (4): ReLU(inplace=True)\n",
-      "    (5): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
-      "    (6): Conv2d(128, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "    (7): ReLU(inplace=True)\n",
-      "    (8): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "    (9): ReLU(inplace=True)\n",
-      "    (10): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
-      "    (11): Conv2d(256, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "    (12): ReLU(inplace=True)\n",
-      "    (13): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "    (14): ReLU(inplace=True)\n",
-      "    (15): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
-      "    (16): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "    (17): ReLU(inplace=True)\n",
-      "    (18): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "    (19): ReLU(inplace=True)\n",
-      "    (20): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
-      "  )\n",
-      "), PerceptualLoss(\n",
-      "  (perceptual): Sequential(\n",
-      "    (0): Conv2d(3, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "    (1): ReLU(inplace=True)\n",
-      "    (2): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "    (3): ReLU(inplace=True)\n",
-      "    (4): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
-      "    (5): Conv2d(64, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "    (6): ReLU(inplace=True)\n",
-      "    (7): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "    (8): ReLU(inplace=True)\n",
-      "    (9): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
-      "    (10): Conv2d(128, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "    (11): ReLU(inplace=True)\n",
-      "    (12): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "    (13): ReLU(inplace=True)\n",
-      "    (14): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "    (15): ReLU(inplace=True)\n",
-      "    (16): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
-      "    (17): Conv2d(256, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "    (18): ReLU(inplace=True)\n",
-      "    (19): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "    (20): ReLU(inplace=True)\n",
-      "    (21): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "    (22): ReLU(inplace=True)\n",
-      "    (23): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
-      "    (24): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "    (25): ReLU(inplace=True)\n",
-      "    (26): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "    (27): ReLU(inplace=True)\n",
-      "    (28): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "    (29): ReLU(inplace=True)\n",
-      "    (30): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
-      "  )\n",
-      "), PerceptualLoss(\n",
-      "  (perceptual): Sequential(\n",
-      "    (0): Conv2d(3, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "    (1): ReLU(inplace=True)\n",
-      "    (2): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "    (3): ReLU(inplace=True)\n",
-      "    (4): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
-      "    (5): Conv2d(64, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "    (6): ReLU(inplace=True)\n",
-      "    (7): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "    (8): ReLU(inplace=True)\n",
-      "    (9): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
-      "    (10): Conv2d(128, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "    (11): ReLU(inplace=True)\n",
-      "    (12): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "    (13): ReLU(inplace=True)\n",
-      "    (14): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "    (15): ReLU(inplace=True)\n",
-      "    (16): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "    (17): ReLU(inplace=True)\n",
-      "    (18): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
-      "    (19): Conv2d(256, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "    (20): ReLU(inplace=True)\n",
-      "    (21): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "    (22): ReLU(inplace=True)\n",
-      "    (23): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "    (24): ReLU(inplace=True)\n",
-      "    (25): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "    (26): ReLU(inplace=True)\n",
-      "    (27): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
-      "    (28): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "    (29): ReLU(inplace=True)\n",
-      "    (30): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "    (31): ReLU(inplace=True)\n",
-      "    (32): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "    (33): ReLU(inplace=True)\n",
-      "    (34): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "    (35): ReLU(inplace=True)\n",
-      "    (36): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
-      "  )\n",
-      "), PerceptualLoss(\n",
-      "  (perceptual): Sequential(\n",
-      "    (0): Conv2d(3, 64, kernel_size=(11, 11), stride=(4, 4), padding=(2, 2))\n",
-      "    (1): ReLU(inplace=True)\n",
-      "    (2): MaxPool2d(kernel_size=3, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
-      "    (3): Conv2d(64, 192, kernel_size=(5, 5), stride=(1, 1), padding=(2, 2))\n",
-      "    (4): ReLU(inplace=True)\n",
-      "    (5): MaxPool2d(kernel_size=3, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
-      "    (6): Conv2d(192, 384, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "    (7): ReLU(inplace=True)\n",
-      "    (8): Conv2d(384, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "    (9): ReLU(inplace=True)\n",
-      "    (10): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "    (11): ReLU(inplace=True)\n",
-      "    (12): MaxPool2d(kernel_size=3, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
-      "  )\n",
-      "), PerceptualLoss(\n",
-      "  (perceptual): Sequential(\n",
-      "    (0): Conv2d(3, 64, kernel_size=(3, 3), stride=(2, 2))\n",
-      "    (1): ReLU(inplace=True)\n",
-      "    (2): MaxPool2d(kernel_size=3, stride=2, padding=0, dilation=1, ceil_mode=True)\n",
-      "    (3): Fire(\n",
-      "      (squeeze): Conv2d(64, 16, kernel_size=(1, 1), stride=(1, 1))\n",
-      "      (squeeze_activation): ReLU(inplace=True)\n",
-      "      (expand1x1): Conv2d(16, 64, kernel_size=(1, 1), stride=(1, 1))\n",
-      "      (expand1x1_activation): ReLU(inplace=True)\n",
-      "      (expand3x3): Conv2d(16, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "      (expand3x3_activation): ReLU(inplace=True)\n",
-      "    )\n",
-      "    (4): Fire(\n",
-      "      (squeeze): Conv2d(128, 16, kernel_size=(1, 1), stride=(1, 1))\n",
-      "      (squeeze_activation): ReLU(inplace=True)\n",
-      "      (expand1x1): Conv2d(16, 64, kernel_size=(1, 1), stride=(1, 1))\n",
-      "      (expand1x1_activation): ReLU(inplace=True)\n",
-      "      (expand3x3): Conv2d(16, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "      (expand3x3_activation): ReLU(inplace=True)\n",
-      "    )\n",
-      "    (5): MaxPool2d(kernel_size=3, stride=2, padding=0, dilation=1, ceil_mode=True)\n",
-      "    (6): Fire(\n",
-      "      (squeeze): Conv2d(128, 32, kernel_size=(1, 1), stride=(1, 1))\n",
-      "      (squeeze_activation): ReLU(inplace=True)\n",
-      "      (expand1x1): Conv2d(32, 128, kernel_size=(1, 1), stride=(1, 1))\n",
-      "      (expand1x1_activation): ReLU(inplace=True)\n",
-      "      (expand3x3): Conv2d(32, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "      (expand3x3_activation): ReLU(inplace=True)\n",
-      "    )\n",
-      "    (7): Fire(\n",
-      "      (squeeze): Conv2d(256, 32, kernel_size=(1, 1), stride=(1, 1))\n",
-      "      (squeeze_activation): ReLU(inplace=True)\n",
-      "      (expand1x1): Conv2d(32, 128, kernel_size=(1, 1), stride=(1, 1))\n",
-      "      (expand1x1_activation): ReLU(inplace=True)\n",
-      "      (expand3x3): Conv2d(32, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "      (expand3x3_activation): ReLU(inplace=True)\n",
-      "    )\n",
-      "    (8): MaxPool2d(kernel_size=3, stride=2, padding=0, dilation=1, ceil_mode=True)\n",
-      "    (9): Fire(\n",
-      "      (squeeze): Conv2d(256, 48, kernel_size=(1, 1), stride=(1, 1))\n",
-      "      (squeeze_activation): ReLU(inplace=True)\n",
-      "      (expand1x1): Conv2d(48, 192, kernel_size=(1, 1), stride=(1, 1))\n",
-      "      (expand1x1_activation): ReLU(inplace=True)\n",
-      "      (expand3x3): Conv2d(48, 192, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "      (expand3x3_activation): ReLU(inplace=True)\n",
-      "    )\n",
-      "    (10): Fire(\n",
-      "      (squeeze): Conv2d(384, 48, kernel_size=(1, 1), stride=(1, 1))\n",
-      "      (squeeze_activation): ReLU(inplace=True)\n",
-      "      (expand1x1): Conv2d(48, 192, kernel_size=(1, 1), stride=(1, 1))\n",
-      "      (expand1x1_activation): ReLU(inplace=True)\n",
-      "      (expand3x3): Conv2d(48, 192, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "      (expand3x3_activation): ReLU(inplace=True)\n",
-      "    )\n",
-      "    (11): Fire(\n",
-      "      (squeeze): Conv2d(384, 64, kernel_size=(1, 1), stride=(1, 1))\n",
-      "      (squeeze_activation): ReLU(inplace=True)\n",
-      "      (expand1x1): Conv2d(64, 256, kernel_size=(1, 1), stride=(1, 1))\n",
-      "      (expand1x1_activation): ReLU(inplace=True)\n",
-      "      (expand3x3): Conv2d(64, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "      (expand3x3_activation): ReLU(inplace=True)\n",
-      "    )\n",
-      "    (12): Fire(\n",
-      "      (squeeze): Conv2d(512, 64, kernel_size=(1, 1), stride=(1, 1))\n",
-      "      (squeeze_activation): ReLU(inplace=True)\n",
-      "      (expand1x1): Conv2d(64, 256, kernel_size=(1, 1), stride=(1, 1))\n",
-      "      (expand1x1_activation): ReLU(inplace=True)\n",
-      "      (expand3x3): Conv2d(64, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "      (expand3x3_activation): ReLU(inplace=True)\n",
-      "    )\n",
-      "  )\n",
-      "), ('Histogram_loss', 0), ('angular_color_loss', 1), ('dark_channel_loss', 2), ('lch_channel_loss', 3), ('hsv_channel_loss', 4), ('ssim', 0), ('psnr', 1), ('mse', 2), ('gradientLoss', 3)]\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "from loss import *\n",
-    "loss_battle = []\n",
-    "loss_battle.extend(build_perceptual_losses())\n",
-    "loss_battle.extend(build_channel_losses())\n",
-    "loss_battle.extend(build_structural_losses())\n",
-    "print(f\"\"\"\n",
-    "losses: {len(loss_battle)}\n",
-    "losses: {loss_battle}\n",
-    "\"\"\")"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
