modificacoes e ajustes de erros nas loss functions

--- a/train.ipynb
+++ b/train.ipynb
@@ -2,96 +2,42 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/5 [00:00<?, ?it/s]\n",
       "14 loss functions to train with\n",
       "3 models to train with\n",
-      "Train raw: 712 Train ref: 712 Test raw: 178 Test ref: 178\n",
       "\n",
-      "Training UNet with PerceptualLoss_vgg11\n",
-      "  0%|          | 0/100 [00:00<?, ?it/s]\n",
-      "0it [00:00, ?it/s]\n",
-      "Epoch [0/100], Batch [0/712], Loss: 0.0\n",
-      "Epoch [0/100], Batch [10/712], Loss: 0.0\n",
-      "Epoch [0/100], Batch [20/712], Loss: 0.0\n",
-      "Epoch [0/100], Batch [30/712], Loss: 0.0\n",
-      "Epoch [0/100], Batch [40/712], Loss: 0.0\n",
-      "Epoch [0/100], Batch [50/712], Loss: 0.0\n",
-      "Epoch [0/100], Batch [60/712], Loss: 0.0\n",
-      "Epoch [0/100], Batch [70/712], Loss: 0.0\n",
-      "Epoch [0/100], Batch [80/712], Loss: 0.0\n",
-      "Epoch [0/100], Batch [90/712], Loss: 0.0\n",
-      "Epoch [0/100], Batch [100/712], Loss: 0.0\n",
-      "Epoch [0/100], Batch [110/712], Loss: 0.0\n",
-      "Epoch [0/100], Batch [120/712], Loss: 0.0\n",
-      "Epoch [0/100], Batch [130/712], Loss: 0.0\n",
-      "Epoch [0/100], Batch [140/712], Loss: 0.0\n",
-      "Epoch [0/100], Batch [150/712], Loss: 0.0\n",
-      "Epoch [0/100], Batch [160/712], Loss: 0.0\n",
-      "Epoch [0/100], Batch [170/712], Loss: 0.0\n",
-      "Epoch [0/100], Batch [180/712], Loss: 0.0\n",
-      "Epoch [0/100], Batch [190/712], Loss: 0.0\n",
-      "Epoch [0/100], Batch [200/712], Loss: 0.0\n",
-      "Epoch [0/100], Batch [210/712], Loss: 0.0\n",
-      "Epoch [0/100], Batch [220/712], Loss: 0.0\n",
-      "Epoch [0/100], Batch [230/712], Loss: 0.0\n",
-      "Epoch [0/100], Batch [240/712], Loss: 0.0\n",
-      "Epoch [0/100], Batch [250/712], Loss: 0.0\n",
-      "Epoch [0/100], Batch [260/712], Loss: 0.0\n",
-      "Epoch [0/100], Batch [270/712], Loss: 0.0\n",
-      "Epoch [0/100], Batch [280/712], Loss: 0.0\n",
-      "Epoch [0/100], Batch [290/712], Loss: 0.0\n",
-      "Epoch [0/100], Batch [300/712], Loss: 0.0\n",
-      "Epoch [0/100], Batch [310/712], Loss: 0.0\n",
-      "Epoch [0/100], Batch [320/712], Loss: 0.0\n",
-      "Epoch [0/100], Batch [330/712], Loss: 0.0\n",
-      "Epoch [0/100], Batch [340/712], Loss: 0.0\n",
-      "Epoch [0/100], Batch [350/712], Loss: 0.0\n",
-      "Epoch [0/100], Batch [360/712], Loss: 0.0\n",
-      "Epoch [0/100], Batch [370/712], Loss: 0.0\n",
-      "^C\n",
+      "Train raw: 712 Train ref: 712 \n",
+      "Test raw: 178 Test ref: 178\n",
+      "\n",
+      "Training: UNet with PerceptualLoss_vgg11\n",
+      "  1%|▍                                          | 1/100 [00:15<24:49, 15.04s/it]^C\n",
+      "  1%|▍                                          | 1/100 [00:20<34:04, 20.65s/it]\n",
       "Traceback (most recent call last):\n",
-      "  File \"/home/pdi_4/Documentos/Loss_battle/train_noddp.py\", line 97, in <module>\n",
+      "  File \"/home/pdi_4/Documentos/Loss_battle/train_noddp.py\", line 91, in <module>\n",
       "    train_models(epochs=args.epochs)\n",
-      "  File \"/home/pdi_4/Documentos/Loss_battle/train_noddp.py\", line 43, in train_models\n",
-      "    for batch_idx, (data, target) in tqdm(enumerate(train_loader_UIEB)):\n",
-      "  File \"/home/pdi_4/anaconda3/envs/losstest/lib/python3.11/site-packages/tqdm/notebook.py\", line 250, in __iter__\n",
-      "    for obj in it:\n",
-      "  File \"/home/pdi_4/anaconda3/envs/losstest/lib/python3.11/site-packages/tqdm/std.py\", line 1181, in __iter__\n",
-      "    for obj in iterable:\n",
-      "  File \"/home/pdi_4/anaconda3/envs/losstest/lib/python3.11/site-packages/torch/utils/data/dataloader.py\", line 630, in __next__\n",
-      "    data = self._next_data()\n",
-      "           ^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/pdi_4/anaconda3/envs/losstest/lib/python3.11/site-packages/torch/utils/data/dataloader.py\", line 1327, in _next_data\n",
-      "    idx, data = self._get_data()\n",
-      "                ^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/pdi_4/anaconda3/envs/losstest/lib/python3.11/site-packages/torch/utils/data/dataloader.py\", line 1293, in _get_data\n",
-      "    success, data = self._try_get_data()\n",
-      "                    ^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/pdi_4/anaconda3/envs/losstest/lib/python3.11/site-packages/torch/utils/data/dataloader.py\", line 1131, in _try_get_data\n",
-      "    data = self._data_queue.get(timeout=timeout)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/pdi_4/anaconda3/envs/losstest/lib/python3.11/multiprocessing/queues.py\", line 113, in get\n",
-      "    if not self._poll(timeout):\n",
-      "           ^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/pdi_4/anaconda3/envs/losstest/lib/python3.11/multiprocessing/connection.py\", line 257, in poll\n",
-      "    return self._poll(timeout)\n",
-      "           ^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/pdi_4/anaconda3/envs/losstest/lib/python3.11/multiprocessing/connection.py\", line 440, in _poll\n",
-      "    r = wait([self], timeout)\n",
-      "        ^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/pdi_4/anaconda3/envs/losstest/lib/python3.11/multiprocessing/connection.py\", line 947, in wait\n",
-      "    ready = selector.select(timeout)\n",
-      "            ^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/pdi_4/anaconda3/envs/losstest/lib/python3.11/selectors.py\", line 415, in select\n",
-      "    fd_event_list = self._selector.poll(timeout)\n",
-      "                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/pdi_4/Documentos/Loss_battle/train_noddp.py\", line 51, in train_models\n",
+      "    optimizer.step()\n",
+      "  File \"/home/pdi_4/anaconda3/envs/losstest/lib/python3.11/site-packages/torch/optim/optimizer.py\", line 484, in wrapper\n",
+      "    out = func(*args, **kwargs)\n",
+      "          ^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/pdi_4/anaconda3/envs/losstest/lib/python3.11/site-packages/torch/optim/optimizer.py\", line 89, in _use_grad\n",
+      "    ret = func(self, *args, **kwargs)\n",
+      "          ^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/pdi_4/anaconda3/envs/losstest/lib/python3.11/site-packages/torch/optim/adamw.py\", line 216, in step\n",
+      "    has_complex = self._init_group(\n",
+      "                  ^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/pdi_4/anaconda3/envs/losstest/lib/python3.11/site-packages/torch/optim/adamw.py\", line 139, in _init_group\n",
+      "    state = self.state[p]\n",
+      "            ~~~~~~~~~~^^^\n",
+      "  File \"/home/pdi_4/anaconda3/envs/losstest/lib/python3.11/site-packages/torch/_tensor.py\", line 1060, in __hash__\n",
+      "    return id(self)\n",
+      "           ^^^^^^^^\n",
       "KeyboardInterrupt\n"
      ]
     }
@@ -101,11 +47,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### torch run multi gpu"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!torchrun --nnodes=2 --nproc_per_node=2 --node_rank=0 --master_addr=\"10.228.252.209\" --master_port=22 main.py --nodes=2 --gpus=2 --epochs=100"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### torchrun local"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!torchrun --nproc_per_node=2 main.py --nodes=1 --gpus=2 --epochs=100"
+   ]
   }
  ],
  "metadata": {
