erro no teste das funcoes

--- a/train.ipynb
+++ b/train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -16,34 +16,56 @@
       "Test raw: 178 Test ref: 178\n",
       "\n",
       "Training: UNet with PerceptualLoss_vgg11\n",
-      "  1%|▍                                          | 1/100 [00:15<24:49, 15.04s/it]^C\n",
-      "  1%|▍                                          | 1/100 [00:20<34:04, 20.65s/it]\n",
+      "100%|█████████████████████████████████████████| 100/100 [23:31<00:00, 14.12s/it]\n",
+      "Testando o modelo UNet_PerceptualLoss_vgg11\n",
+      "0it [00:00, ?it/s]\n",
       "Traceback (most recent call last):\n",
       "  File \"/home/pdi_4/Documentos/Loss_battle/train_noddp.py\", line 91, in <module>\n",
       "    train_models(epochs=args.epochs)\n",
-      "  File \"/home/pdi_4/Documentos/Loss_battle/train_noddp.py\", line 51, in train_models\n",
-      "    optimizer.step()\n",
-      "  File \"/home/pdi_4/anaconda3/envs/losstest/lib/python3.11/site-packages/torch/optim/optimizer.py\", line 484, in wrapper\n",
-      "    out = func(*args, **kwargs)\n",
-      "          ^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/pdi_4/anaconda3/envs/losstest/lib/python3.11/site-packages/torch/optim/optimizer.py\", line 89, in _use_grad\n",
-      "    ret = func(self, *args, **kwargs)\n",
-      "          ^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/pdi_4/anaconda3/envs/losstest/lib/python3.11/site-packages/torch/optim/adamw.py\", line 216, in step\n",
-      "    has_complex = self._init_group(\n",
-      "                  ^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/pdi_4/anaconda3/envs/losstest/lib/python3.11/site-packages/torch/optim/adamw.py\", line 139, in _init_group\n",
-      "    state = self.state[p]\n",
-      "            ~~~~~~~~~~^^^\n",
-      "  File \"/home/pdi_4/anaconda3/envs/losstest/lib/python3.11/site-packages/torch/_tensor.py\", line 1060, in __hash__\n",
-      "    return id(self)\n",
-      "           ^^^^^^^^\n",
-      "KeyboardInterrupt\n"
+      "  File \"/home/pdi_4/Documentos/Loss_battle/train_noddp.py\", line 69, in train_models\n",
+      "    psnr_value, ssim_value, uciqe_, uiqm = calculate_metrics(predictions, target)\n",
+      "                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/pdi_4/Documentos/Loss_battle/metrics/metrics.py\", line 472, in calculate_metrics\n",
+      "    uciqe_ = uciqe(nargin=1,loc=corrected)#usarei este\n",
+      "             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/pdi_4/Documentos/Loss_battle/metrics/metrics.py\", line 39, in uciqe\n",
+      "    img_lab = cv2.cvtColor(loc, cv2.COLOR_BGR2LAB)  # Transform to Lab color space\n",
+      "              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "cv2.error: OpenCV(4.7.0) /home/conda/feedstock_root/build_artifacts/libopencv_1675729943781/work/modules/imgproc/src/color.simd_helpers.hpp:92: error: (-2:Unspecified error) in function 'cv::impl::{anonymous}::CvtHelper<VScn, VDcn, VDepth, sizePolicy>::CvtHelper(cv::InputArray, cv::OutputArray, int) [with VScn = cv::impl::{anonymous}::Set<3, 4>; VDcn = cv::impl::{anonymous}::Set<3>; VDepth = cv::impl::{anonymous}::Set<0, 5>; cv::impl::{anonymous}::SizePolicy sizePolicy = cv::impl::<unnamed>::NONE; cv::InputArray = const cv::_InputArray&; cv::OutputArray = const cv::_OutputArray&]'\n",
+      "> Invalid number of channels in input image:\n",
+      ">     'VScn::contains(scn)'\n",
+      "> where\n",
+      ">     'scn' is 1\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "!python train_noddp.py "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "UNet_PerceptualLoss_vgg11_ckpt\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Definir a string do caminho\n",
+    "path = \"output/ckpt_battle/UNet_PerceptualLoss_vgg11_ckpt.pth\"\n",
+    "\n",
+    "# Dividir a string usando '/' como delimitador e selecionar o último elemento\n",
+    "filename = path.split('/')[-1].split('.')[0]\n",
+    "\n",
+    "# Imprimir o resultado\n",
+    "print(filename)  "
    ]
   },
   {
